--- a/02_slidein_menu/style.css
+++ b/02_slidein_menu/style.css
@@ -1,17 +1,97 @@
-nav {
-    background-color: green;
-}
+body {
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-nav.open {
-    background-color: hotpink;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-a.toggle {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50px;
-    background-color: red;
+    a {
+        color: white;
+        text-decoration: none;
+    }
+
+    nav {
+        background-color: #2b2b2b;
+        color: white;
+        position: absolute;
+        top: 0;
+        left: -25rem;
+        height: 100vh;
+        width: 25rem;
+        padding: 5.5rem 1.5rem 1rem;
+        transition: all 1s;
+
+        a {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 3rem;
+            position: relative;
+            left: -25rem;
+            transition: all 0s 1s;
+        
+
+            article h3 {
+                margin-bottom: 1rem;
+            }
+
+            aside,
+            article p {
+                color: #cccccc;
+            }
+        }
+    }
+
+    nav.open {
+        left: 0;
+        transition: all 1s;
+
+        a {
+            left: 0;
+
+            &:nth-of-type(1) {
+                transition: all .5s .2s;
+            }
+            &:nth-of-type(2) {
+                transition: all .5s .4s;
+            }
+            &:nth-of-type(3) {
+                transition: all .5s .6s;
+            }
+            &:nth-of-type(4) {
+                transition: all .5s .8s;
+            }
+        }
+    }
+
+
+    a.toggle {
+        position: absolute;
+        top: 1.5rem;
+        left: 1.5rem;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        background-color: tomato;
+    }
+
+    h1,
+    h2 {
+        text-align: center;
+    }
+
+    h2 {
+        padding-top: 0.5rem;
+        font-weight: normal;
+        font-size: 1.2rem;
+        color: #2b2b2b;
+    }
 }
