--- a/03_cardspread/style.css
+++ b/03_cardspread/style.css
@@ -1,131 +1,128 @@
-@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 
-    aside {
-        position: fixed;
-        top: 0;
-        left: 0;
-        
-        p {
-            margin: 2rem;
-            padding: 0;
-            width: 8rem;
-            font-family: 'Reenie Beanie';
-            font-size: 1.5rem;
-            color: #cd66ff;
-            transform: rotate(-4deg);
+  aside {
+    position: fixed;
+    top: 0;
+    left: 0;
 
-        }
+    p {
+      margin: 2rem;
+      padding: 0;
+      width: 8rem;
+      font-family: "Reenie Beanie";
+      font-size: 1.5rem;
+      color: #cd66ff;
+      transform: rotate(-4deg);
+    }
+  }
 
+  .card {
+    height: 15rem;
+    width: 10rem;
+    background-color: aquamarine;
+    position: absolute;
+    border-radius: 4px;
+    transition: all 0.7s;
+
+    &:nth-of-type(1) {
+      background-color: #cd66ff;
+      z-index: 9;
     }
 
+    &:nth-of-type(2) {
+      background-color: #ff6599;
+      z-index: 8;
+    }
+
+    &:nth-of-type(3) {
+      background-color: #ff0000;
+      z-index: 7;
+    }
+
+    &:nth-of-type(4) {
+      background-color: #ff8e00;
+      z-index: 6;
+    }
+
+    &:nth-of-type(5) {
+      background-color: #ffff00;
+      z-index: 5;
+    }
+
+    &:nth-of-type(6) {
+      background-color: #008e00;
+      z-index: 4;
+    }
+
+    &:nth-of-type(7) {
+      background-color: #00c0c0;
+      z-index: 3;
+    }
+
+    &:nth-of-type(8) {
+      background-color: #400098;
+      z-index: 2;
+    }
+
+    &:nth-of-type(9) {
+      background-color: #8e008e;
+      z-index: 1;
+    }
+  }
+
+  &:hover {
     .card {
-        height: 15rem;
-        width: 10rem;
-        background-color: aquamarine;
-        position: absolute;
-        border-radius: 4px;
-        transition: all .7s;
+      box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
+      transform-origin: 5rem 25rem;
 
-        &:nth-of-type(1) {
-            background-color: #cd66ff;
-            z-index: 9;
-        }
+      &:nth-of-type(1) {
+        transform: translate(0, -3rem) rotate(-40deg);
+      }
 
-        &:nth-of-type(2) {
-            background-color: #ff6599;
-            z-index: 8;
-        }
+      &:nth-of-type(2) {
+        transform: translate(0, -3rem) rotate(-30deg);
+      }
 
-        &:nth-of-type(3) {
-            background-color: #ff0000;
-            z-index: 7;
-        }
+      &:nth-of-type(3) {
+        transform: translate(0, -3rem) rotate(-20deg);
+      }
 
-        &:nth-of-type(4) {
-            background-color: #ff8e00;
-            z-index: 6;
-        }
+      &:nth-of-type(4) {
+        transform: translate(0, -3rem) rotate(-10deg);
+      }
 
-        &:nth-of-type(5) {
-            background-color: #ffff00;
-            z-index: 5;
-        }
+      &:nth-of-type(5) {
+        transform: translate(0, -3rem) rotate(0deg);
+      }
 
-        &:nth-of-type(6) {
-            background-color: #008e00;
-            z-index: 4;
-        }
+      &:nth-of-type(6) {
+        transform: translate(0, -3rem) rotate(10deg);
+      }
 
-        &:nth-of-type(7) {
-            background-color: #00c0c0;
-            z-index: 3;
-        }
+      &:nth-of-type(7) {
+        transform: translate(0, -3rem) rotate(20deg);
+      }
 
-        &:nth-of-type(8) {
-            background-color: #400098;
-            z-index: 2;
-        }
+      &:nth-of-type(8) {
+        transform: translate(0, -3rem) rotate(30deg);
+      }
 
-        &:nth-of-type(9) {
-            background-color: #8e008e;
-            z-index: 1;
-        }
+      &:nth-of-type(9) {
+        transform: translate(0, -3rem) rotate(40deg);
+      }
     }
-
-    &:hover {
-        .card {
-            box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
-            transform-origin: 5rem 25rem;
-
-
-            &:nth-of-type(1) {
-                transform: translate(0, -3rem) rotate(-40deg);
-            }
-
-            &:nth-of-type(2) {
-                transform: translate(0, -3rem) rotate(-30deg);
-            }
-
-            &:nth-of-type(3) {
-                transform: translate(0, -3rem) rotate(-20deg);
-            }
-
-            &:nth-of-type(4) {
-                transform: translate(0, -3rem) rotate(-10deg);
-            }
-
-            &:nth-of-type(5) {
-                transform: translate(0, -3rem) rotate(0deg);
-            }
-
-            &:nth-of-type(6) {
-                transform: translate(0, -3rem) rotate(10deg);
-            }
-
-            &:nth-of-type(7) {
-                transform: translate(0, -3rem) rotate(20deg);
-            }
-
-            &:nth-of-type(8) {
-                transform: translate(0, -3rem) rotate(30deg);
-            }
-
-            &:nth-of-type(9) {
-                transform: translate(0, -3rem) rotate(40deg);
-            }
-        }
-    }
+  }
 }
